# yt_bot_detector

./: Dockerfile.test  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
config/pipelines/: basic_pipeline.yaml  basic_pipeline2.yaml  basic_pipeline3.yaml  basic_pipeline4.yaml  basic_pipeline5.yaml
data/basic_pipeline_v1_0/: basic_pipeline_all.csv  basic_pipeline_metadata.yaml  basic_pipeline_profile.csv
data/basic_pipeline_v2_0/: basic_pipeline_all.csv  basic_pipeline_metadata.yaml  basic_pipeline_profile.csv
data/basic_pipeline_v3_0/: basic_pipeline_all.csv  basic_pipeline_metadata.yaml  basic_pipeline_profile.csv
data/basic_pipeline_v4_0/: basic_pipeline_all.csv  basic_pipeline_metadata.yaml  basic_pipeline_profile.csv
data/basic_pipeline_v5_0/: basic_pipeline_all.csv  basic_pipeline_metadata.yaml  basic_pipeline_profile.csv
notebooks/: 02_eda.ipynb  03_features.ipynb  api.ipynb
psql/: schema.sql
results/baseline/: isolation_forest_predictions.csv
results/umap/: umap_embedding.csv  umap_model.pkl
results/umap2/: umap_embedding.csv  umap_model.pkl
results/umap3/: umap_embedding.csv  umap_model.pkl
results/umap4/: umap_embedding.csv  umap_model.pkl
results/umap6/: umap_embedding.csv
results/umap7/: umap_embedding.csv
scripts/data/: Dockerfile  api.py
scripts/processing/: Dockerfile  run_pipeline.py
src/data/: api.py  psql.py
src/model/: Dockerfile.isoforest  Dockerfile.umap  model.py  (+2 more)
tests/: test_api_scraper.py  test_feature_engineering.py  test_feature_store.py  test_psql.py
(+4 files in other folders)
