[project]
name = "yt-bot-detector"
version = "0.1.0"
description = "ML module to identify bots in YouTube comments"
requires-python = "3.13"
dependencies = [
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "psycopg2-binary==2.9.11",
    "pytest==8.4.2",
    "google-api-core==2.26.0",
    "google-api-python-client==2.184.0",
    "typing-extensions",
    "pydantic==2.12.0",
]

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
